[package]
name = "fnm"
version = "1.33.1"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/Schniz/fnm"
description = "Fast and simple Node.js version manager"

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
clap = { version = "3.2.23", features = ["derive", "env"] }
serde_json = "1.0.89"
chrono = { version = "0.4.23", features = ["serde"] }
tar = "0.4.38"
xz2 = "0.1.7"
node-semver = "2.1.0"
dirs = "4.0.0"
colored = "2.0.0"
zip = "0.6.3"
tempfile = "3.3.0"
indoc = "1.0.7"
log = "0.4.17"
env_logger = "0.9.3"
atty = "0.2.14"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
url = "2.3.1"
sysinfo = "0.26.8"
thiserror = "1.0.37"
clap_complete = "3.2.5"
anyhow = "1.0.66"

[dev-dependencies]
pretty_assertions = "1.3.0"
duct = "0.13.6"
test-log = "0.2.11"

[build-dependencies]
embed-resource = "1.7.4"

[profile.release]
strip = true

[target.'cfg(windows)'.dependencies]
csv = "1.1.6"
junction = "0.2.0"

[features]
