[package]
name = "fnm"
version = "1.39.0"
authors = ["Gal Schlezinger <gal@spitfire.co.il>"]
edition = "2021"
build = "build.rs"
license = "GPL-3.0"
repository = "https://github.com/Schniz/fnm"
description = "Fast and simple Node.js version manager"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde", "now"], default-features = false }
tar = "0.4.40"
xz2 = "0.1.7"
node-semver = "2.1.0"
etcetera = "0.8.0"
colored = "2.1.0"
zip = "2.1.0"
tempfile = "3.10.1"
indoc = "2.0.5"
log = "0.4.21"
env_logger = "0.11.3"
encoding_rs_io = "0.1.7"
reqwest = { version = "0.12.4", features = ["blocking", "json", "rustls-tls", "rustls-tls-native-roots", "brotli"], default-features = false }
url = "2.5.0"
sysinfo = "0.30.12"
thiserror = "1.0.61"
clap_complete = "4.5.2"
anyhow = "1.0.86"
indicatif = { version = "0.17.8", features = ["improved_unicode"] }
flate2 = "1.0.30"
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
duct = "0.13.7"
test-log = "0.2.16"
http = "1.1.0"

[build-dependencies]
embed-resource = "2.4.2"

[target.'cfg(windows)'.dependencies]
csv = "1.3.0"
junction = "1.1.0"

[features]
